--- a/.buildkite/quality-gates/pipeline.tests-qa.yaml
+++ b/.buildkite/quality-gates/pipeline.tests-qa.yaml
@@ -11,3 +11,10 @@ steps:
       branch: "${BUILDKITE_BRANCH}"
       env:
         IMAGE_OVERRIDE: ""
+
+  - label: ":java: Verify upgrade from current staging"
+    command: ".buildkite/scripts/run-gradle.sh :qa:rolling-upgrade:check -Dtests.bwc.tag=current_staging"
+    agents:
+      provider: "gcp"
+      machineType: "n1-standard-16"
+      image: family/elasticsearch-ubuntu-2022
