--- a/.buildkite/quality-gates/pipeline.tests-staging.yaml
+++ b/.buildkite/quality-gates/pipeline.tests-staging.yaml
@@ -16,3 +16,23 @@ steps:
       provider: "gcp"
       machineType: "n1-standard-16"
       image: family/elasticsearch-ubuntu-2022
+  - command:
+    - echo "Waiting for 60m for indicative health metrics"
+    - sleep ${QA_GATE_WAIT_PERIOD:-3600}
+  - wait
+  - label: ":pipeline: Trigger Elasticsearch observability checks in Staging"
+    trigger: serverless-quality-gates
+    build:
+      message: "${BUILDKITE_MESSAGE}"
+      env:
+        TARGET_ENV: staging
+        CHECK_LOG_ERROR_RATE: true
+        MAX_ERROR_PERCENT: 10
+        QUERY_WINDOW: 60m
+        LOG_LEVEL_ERROR_VALUE: ERROR
+        SERVICE: elasticsearch
+        SERVICE_REPOSITORY: docker.elastic.co/elasticsearch-ci/elasticsearch-serverless
+        SERVICE_VERSION: ${SERVICE_VERSION:0:12}
+        SERVICE_TYPE_FIELD: kubernetes.container.name
+        CHECK_ELASTICSEARCH_RED_HEALTH_RATE: true
+        MAX_ELASTICSEARCH_RED_HEALTH_PERCENT: 5
