--- a/qa/x-pack-rest-test/src/yamlRestTest/resources/rest-api-spec/test/serverless/autoscaling/get_autoscaling_metrics.yml
+++ b/qa/x-pack-rest-test/src/yamlRestTest/resources/rest-api-spec/test/serverless/autoscaling/get_autoscaling_metrics.yml
@@ -37,5 +37,5 @@
   - is_true: "ml.metrics.extra_model_memory_in_bytes.quality"
   - match: { ml.metrics.extra_processors.value: 0 }
   - is_true: "ml.metrics.extra_processors.quality"
-  # MUTED, see gh#941 - match: { ml.metrics.remove_node_memory_in_bytes.value: 0 }
+  - gt: { "ml.metrics.remove_node_memory_in_bytes.value" : 0 }
   - is_true: "ml.metrics.remove_node_memory_in_bytes.quality"
