Fix deploy id for deploying es manually in bk (#975)
Co-authored-by: elasticsearchmachine <infra-root+elasticsearchmachine@elastic.co>

--- a/.buildkite/pipeline.deploy-dev.yml
+++ b/.buildkite/pipeline.deploy-dev.yml
@@ -2,7 +2,7 @@ env:
   BUILDKITE_DIR: ".buildkite"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
   IMAGE_TAG: "git-${BUILDKITE_COMMIT:0:12}"
-  DEPLOY_ID: "${DEPLOY_ID:-${CI_PIPELINE_ID}-${IMAGE_TAG}}"
+  DEPLOY_ID: "${DEPLOY_ID:-ess-e2e-ci-${IMAGE_TAG}}"
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
   AWS_REGION: "${AWS_REGION:-eu-west-1}"
