Don't validate submodule branch on patch releases (#995)

--- a/.buildkite/pipeline.intake.yml
+++ b/.buildkite/pipeline.intake.yml
@@ -5,7 +5,7 @@ env:
 
 steps:
   - label: ":git: Validate elasticsearch submodule"
-    branches: 'main release/*'
+    branches: 'main'
     command: ".buildkite/scripts/validate-submodule.sh"
     agents:
       provider: "gcp"
