--- a/distribution/archives/src/serverless-default-settings.yml
+++ b/distribution/archives/src/serverless-default-settings.yml
@@ -1,2 +1,4 @@
 stateless.enabled: true
 search.query_phase_parallel_collection_enabled: true
+s3.client.default.max_retries: 5
+s3.client.backup.max_retries: 9
