Send notifications for failed promotion builds to Slack

--- a/.buildkite/pipeline.promote-release.yml
+++ b/.buildkite/pipeline.promote-release.yml
@@ -4,3 +4,7 @@ steps:
     agents:
       image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.5"
       memory: "4G"
+
+notify:
+  - slack: "#es-serverless-gitops"
+    if: build.state == "failed"
