Wrap vault requests in build jobs in a retry (#1012)
* Wrap vault request in a retry

Access to vault has shown to be a bit brittle and causing build flakyness from time to time.
By wrapping vault request in a retry we try to reduce the brittleness

--- a/.buildkite/pipeline.intake.yml
+++ b/.buildkite/pipeline.intake.yml
@@ -2,6 +2,7 @@ env:
   GITOPS_ENV: "${GITOPS_ENV:-dev}"
   GPCTL_CONFIG: "${GPCTL_CONFIG:-https://raw.githubusercontent.com/elastic/serverless-gitops/main/gen/gpctl/elasticsearch/dev.yaml}"
   SKIP_DOCKER: "true"
+  BUILDKITE_DIR: ".buildkite"
 
 steps:
   - label: ":git: Validate elasticsearch submodule"
