--- a/distribution/archives/src/serverless-default-settings.yml
+++ b/distribution/archives/src/serverless-default-settings.yml
@@ -12,3 +12,10 @@ cluster.routing.allocation.node_initial_primaries_recoveries: 10
 # increase to 5K in serverless. This is not unheard of on frozen, so should work. Also, stats is not available to
 # users so we have some control. Finally, if this does not work, we would likely like to investigate it.
 cluster.max_shards_per_node: 5000
+
+# TEMPORARY: until CP-3935 is resolved, the controller will force kill nodes shutting down after 5 minutes
+# this override temporarily sets the ES timeout to less than 5 minutes so that we ensure (1) that we log that
+# we breached the timeout and (2) that the polling aligns so that we don't timeout just before the last
+# poll can actually run.
+serverless.sigterm.timeout: 290s
+serverless.sigterm.poll_interval: 57s
