--- a/.buildkite/pipeline.undeploy-qa.yml
+++ b/.buildkite/pipeline.undeploy-qa.yml
@@ -1,6 +1,16 @@
-agents:
-  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.2"
-  memory: "4G"
+env:
+  BUILDKITE_DIR: ".buildkite"
+  IMAGE_TAG: "git-${BUILDKITE_COMMIT:0:12}"
+  DEPLOY_ID: "${DEPLOY_ID:-ess-ci-${IMAGE_TAG}}"
+  VAULT_PATH_API_KEY: "secret/ci/elastic-elasticsearch-serverless/ess-delivery-ci-qa-creds"
+  ENV_URL: "https://global.qa.cld.elstc.co"
+  AWS_REGION: "aws-eu-west-1"
+  TEST_ENV: "qa"
+  IMAGE_OVERRIDE: "${IMAGE_OVERRIDE-docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${IMAGE_TAG}}"
+
 steps:
-  - label: "Undeploy QA"
-    command: echo "Hello!"
+  - label: ":k8s: Undeploy deployment from ${TEST_ENV}"
+    command: "$BUILDKITE_DIR/scripts/undeploy-managed.sh"
+    agents:
+      image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.5"
+      memory: "4G"
