--- a/.buildkite/quality-gates/pipeline.tests-staging.yaml
+++ b/.buildkite/quality-gates/pipeline.tests-staging.yaml
@@ -20,6 +20,10 @@ steps:
       - "current_production-canary"
       - "current_production-noncanary"
 
+  - label: "Trigger synthetic tests"
+    trigger: "esbench-serverless-synthetic-test"
+    async: true
+    
   - label: ":hourglass: Wait 1 hour for environment health metrics"
     command:
     - echo "Waiting for 60m for indicative health metrics"
