--- a/libs/serverless-xpack-template-resources/src/main/resources/logs@settings.json
+++ b/libs/serverless-xpack-template-resources/src/main/resources/logs@settings.json
@@ -9,7 +9,7 @@
         "mapping": {
           "ignore_malformed": true
         },
-        "default_pipeline": "logs-default-pipeline"
+        "default_pipeline": "logs@default-pipeline"
       }
     },
     "lifecycle": {}
