Enable APM Metrics in Elasticsearch (#1151)
This commit enables APM metrics in Elasticsearch serverless with exceptions

local environment will only have apm metrics enabled with flag --with-apm-server PR (it is a prerequisite for this PR)
dev environment is no longer needed (not massively used by es developers)
for rest tests the test clusters will have the setting switched off by default see DefaultServerlessLocalConfigProvider
the old style, gradle style testclusters configuration is not used in serverless, so we don't have to worry about it
a follow up from #899

--- a/distribution/archives/src/serverless-default-settings.yml
+++ b/distribution/archives/src/serverless-default-settings.yml
@@ -23,3 +23,7 @@ serverless.sigterm.poll_interval: 59s
 # Remediation for ES-7057; caches the last successfully loaded role mappings and returns these if security index
 # is unavailable
 xpack.security.authz.store.role_mappings.last_load_cache.enabled: true
+
+tracing.apm.agent.server_url: http://apm-server.elastic-agent:8200
+telemetry.metrics.enabled: true
+tracing.apm.agent.metrics_interval: 60s
