QX-337: QG pipeline runs should not skip intermediate builds (#1167)

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -360,6 +360,7 @@ spec:
     spec:
       repository: elastic/elasticsearch-serverless
       pipeline_file: ./.buildkite/quality-gates/pipeline.quality-gates.yaml
+      skip_intermediate_builds: false
       provider_settings:
         trigger_mode: none
       teams:
