[ML] Increase inference timeouts in tests (#1209)
There have been a couple of cases where inference has
timed out in CI tests when running in parallel with other
test suites.

This change bumps the timeouts from 10 to 30 seconds.

Closes #1179

--- a/modules/serverless-ml/src/yamlRestTest/resources/rest-api-spec/test/trained_model_filtering.yml
+++ b/modules/serverless-ml/src/yamlRestTest/resources/rest-api-spec/test/trained_model_filtering.yml
@@ -71,6 +71,7 @@ teardown:
         Authorization: "Basic eF9wYWNrX3Jlc3RfdXNlcjp4LXBhY2stdGVzdC1wYXNzd29yZA==" # x_pack_rest_user, an operator
       ml.infer_trained_model:
         model_id: "test_model"
+        timeout: "30s"
         body: >
           {
             "docs": [
@@ -83,6 +84,7 @@ teardown:
         Authorization: "Basic eF9wYWNrX3Jlc3RfdXNlcjp4LXBhY2stdGVzdC1wYXNzd29yZA==" # x_pack_rest_user, an operator
       ml.infer_trained_model:
         model_id: "test_model"
+        timeout: "30s"
         body: >
           {
             "docs": [
@@ -95,6 +97,7 @@ teardown:
         Authorization: "Basic eF9wYWNrX3Jlc3RfdXNlcjp4LXBhY2stdGVzdC1wYXNzd29yZA==" # x_pack_rest_user, an operator
       ml.infer_trained_model:
         model_id: "test_model"
+        timeout: "30s"
         body: >
           {
             "docs": [
@@ -117,6 +120,7 @@ teardown:
   - do:
       ml.infer_trained_model:
         model_id: "test_model"
+        timeout: "30s"
         body: >
           {
             "docs": [
@@ -127,6 +131,7 @@ teardown:
   - do:
       ml.infer_trained_model:
         model_id: "test_model"
+        timeout: "30s"
         body: >
           {
             "docs": [
@@ -137,6 +142,7 @@ teardown:
   - do:
       ml.infer_trained_model:
         model_id: "test_model"
+        timeout: "30s"
         body: >
           {
             "docs": [
